--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   equatable: ^2.0.5
   flutter_bloc: ^8.1.3
+  meta: ^1.10.0
 
 dev_dependencies:
   bloc_test: ^9.1.5
